WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233631
[:has() pseudo-class] Cache :has() failures for subtrees
https://bugs.webkit.org/show_bug.cgi?id=233631
Summary
[:has() pseudo-class] Cache :has() failures for subtrees
Antti Koivisto
Reported
2021-11-30 04:10:33 PST
Add a temporary (style resolution/invalidation scoped) cache that remembers whether a given :has() argument has any matches in a subtree.
Attachments
Patch
(8.99 KB, patch)
2021-11-30 05:58 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Patch for landing
(8.94 KB, patch)
2021-11-30 08:51 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2021-11-30 05:58:02 PST
Created
attachment 445410
[details]
Patch
Simon Fraser (smfr)
Comment 2
2021-11-30 08:48:48 PST
Comment on
attachment 445410
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=445410&action=review
> Source/WebCore/css/SelectorChecker.cpp:1252 > - // FIXME: This is almost the worst possible implementation in terms of performance. > + // FIXME: This could be better in terms of performance.
NIce.
Antti Koivisto
Comment 3
2021-11-30 08:51:39 PST
Created
attachment 445422
[details]
Patch for landing
EWS
Comment 4
2021-11-30 10:03:35 PST
Committed
r286302
(
244661@main
): <
https://commits.webkit.org/244661@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 445422
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-11-30 10:04:26 PST
<
rdar://problem/85871354
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug