Source/WebCore/css/SelectorChecker.h
@@ -29,6 +29,7 @@
 
 #include "CSSSelector.h"
 #include "Element.h"
+#include "SelectorMatchingState.h"
 #include "StyleRelations.h"
 #include "StyleScopeOrdinal.h"
 
@@ -95,10 +96,12 @@ public:
         AtomString nameForHightlightPseudoElement;
         const ContainerNode* scope { nullptr };
         Style::ScopeOrdinal styleScopeOrdinal { Style::ScopeOrdinal::Element };
+        Style::SelectorMatchingState* selectorMatchingState { nullptr };
 
         // FIXME: It would be nicer to have a separate object for return values. This requires some more work in the selector compiler.
         Style::Relations styleRelations;
         PseudoIdSet pseudoIDSet;
+        bool matchedInsideScope { false };
     };
 
     bool match(const CSSSelector&, const Element&, CheckingContext&) const;
